# Kodama

./: Cargo.toml  README.md  build.rs
.github/workflows/: main.yml
resources/: Caddyfile  opcodes.json
resources/templates/: changepassword.html  login.html  register.html  web.html  web_base.html
scripts/: run.sh  run_artifacts_linux.sh  run_artifacts_windows.bat
src/: config.rs  lib.rs
src/common/: chara_info.rs  mod.rs
src/ipc/: mod.rs
src/ipc/kodama/: mod.rs
src/ipc/lobby/: chara_make.rs  mod.rs  server_list.rs  service_login_reply.rs
src/ipc/zone/: mod.rs
src/lobby/: connection.rs
src/packet/: compression.rs  encryption.rs  ipc.rs  mod.rs  parsing.rs  send_helpers.rs
src/patch/: mod.rs  sha1.rs
src/world/: common.rs  connection.rs  custom_ipc_handler.rs  database.rs  mod.rs  server.rs
